Fixed disconnection issue